[package]
name = "caproxy"
version = "0.1.0"
authors = ["a3r <arrrght@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
prometheus = "0.6"
bytes = "0.4.12"
rand = "0.6.5"
futures = "0.1.27"
reqwest = "0.9.14"
hyper = "0.12"
log = "0.4"
pretty_env_logger = "0.3"
openssl-sys = "*"

[features]
vendored = ["openssl-sys/vendored"]
